--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +10,47 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>MainPage</title>
 </head>
+
 <body class="main__page">
     <!-- header------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
     <div class="header">
         <div class="container">
-            <div class="header__container"></div>
+            <div class="header__container">
+                <div class="icons">
+                    <div class="icons__row">
+                        <div class="icons__item" onclick="toggleText('map')">
+                            <i class="fas fa-map-marker-alt icons__icon"></i>
+                            <div id="map" class="icons__text">
+                                <a href="https://maps.google.com/?q=Moscow" target="_blank"
+                                    class="icons__link">Москва</a>
+                            </div>
+                        </div>
+
+                        <div class="icons__item" onclick="toggleText('time')">
+                            <i class="fas fa-clock icons__icon"></i>
+                            <div id="time" class="icons__text">
+                                Режим работы: 8:00 – 20:00
+                            </div>
+                        </div>
+
+                        <div class="icons__item" onclick="toggleText('phone')">
+                            <i class="fas fa-phone icons__icon"></i>
+                            <div id="phone" class="icons__text">
+                                <div style="display: flex; gap: 40px;">
+                                    <div style="display: flex; flex-direction: column; gap: 5px;">
+                                        <a href="tel:+74951234567" class="icons__link">+7 (495) 123-45-67</a>
+                                        <a href="tel:+74957654321" class="icons__link">+7 (495) 765-43-21</a>
+                                    </div>
+                                    <div>
+                                        <a href="tel:+74959876543" class="icons__link">+7 (495) 987-65-43</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="icons__button">Заказать звонок</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- header------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
@@ -46,5 +83,8 @@
             <div class="header__container"></div>
         </div>
     </div>
+
+    <script src="./js/main.js"></script>
 </body>
+
 </html>
