--- a/main.html
+++ b/main.html
@@ -22,27 +22,27 @@
                             <i class="fas fa-map-marker-alt icons__icon"></i>
                             <div id="map" class="icons__text">
                                 <a href="https://maps.google.com/?q=Moscow" target="_blank"
-                                    class="icons__link">Москва</a>
+                                    class="icons__link">Волоколамский район,пос. <br> Чисмена, ул. Центральная, 1</a>
                             </div>
                         </div>
 
                         <div class="icons__item" onclick="toggleText('time')">
                             <i class="fas fa-clock icons__icon"></i>
                             <div id="time" class="icons__text">
-                                Режим работы: 8:00 – 20:00
+                                Режим работы: <br> 8:00 – 20:00
                             </div>
                         </div>
 
                         <div class="icons__item" onclick="toggleText('phone')">
                             <i class="fas fa-phone icons__icon"></i>
                             <div id="phone" class="icons__text">
-                                <div style="display: flex; gap: 40px;">
-                                    <div style="display: flex; flex-direction: column; gap: 5px;">
-                                        <a href="tel:+74951234567" class="icons__link">+7 (495) 123-45-67</a>
-                                        <a href="tel:+74957654321" class="icons__link">+7 (495) 765-43-21</a>
+                                <div style="display: flex; gap: 40px;" class="icons__phone">
+                                    <div style="display: flex; flex-direction: column; gap: 5px;" class="phone__two">
+                                        <a href="tel:+74951234567" class="icons__link">+7 (926) 105-94-14</a>
+                                        <a href="tel:+74957654321" class="icons__link">+7 (910) 470-67-97</a>
                                     </div>
-                                    <div>
-                                        <a href="tel:+74959876543" class="icons__link">+7 (495) 987-65-43</a>
+                                    <div >
+                                        <a href="tel:+74959876543" class="icons__link">+7 (499) 994-90-99</a>
                                     </div>
                                 </div>
                             </div>
@@ -53,10 +53,31 @@
             </div>
         </div>
     </div>
-    <!-- header------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
-    <div class="header">
+    <!--navigation------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
+    <div class="navigation">
         <div class="container">
-            <div class="header__container"></div>
+            <div class="navigation__container">
+                <nav class="main__navigation">
+                    <div class="nav__container">
+                        <a href="#" class="logo"><img src="./img/logo.svg" alt=""></a>
+
+                        <div class="nav__links">
+                            <a href="#">О компании</a>
+                            <a href="#">Укладка тротуарной плитки</a>
+                            <a href="#">Портфолио</a>
+                            <a href="#">Полезно знать</a>
+                            <a href="#">Доставка и оплата</a>
+                            <a href="#">Контакты</a>
+                        </div>
+
+                        <div class="hamburger" id="hamburger-menu">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </div>
     </div>
     <!-- header------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
