--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
                                         <a href="tel:+74951234567" class="icons__link">+7 (926) 105-94-14</a>
                                         <a href="tel:+74957654321" class="icons__link">+7 (910) 470-67-97</a>
                                     </div>
-                                    <div >
+                                    <div>
                                         <a href="tel:+74959876543" class="icons__link">+7 (499) 994-90-99</a>
                                     </div>
                                 </div>
@@ -57,11 +57,13 @@
     <div class="navigation">
         <div class="container">
             <div class="navigation__container">
-                <nav class="main__navigation">
+                <nav class="navigation">
                     <div class="nav__container">
-                        <a href="#" class="logo"><img src="./img/logo.svg" alt=""></a>
+                         <a href="#" class="logo"><img src="./img/logo.svg" alt=""></a>
+                        <div class="nav__links" id="navLinks">
+                            
+                            <div class="mobile-close-btn" id="mobileCloseBtn">×</div>
 
-                        <div class="nav__links">
                             <a href="#">О компании</a>
                             <a href="#">Укладка тротуарной плитки</a>
                             <a href="#">Портфолио</a>
