--- a/main.html
+++ b/main.html
@@ -201,22 +201,186 @@
                     <div class="about__box">
                         <h2>О нас</h2>
                         <h4>«Мастер Строй» - надежная и недорогая тротуарная плитка в Волоколамском районе</h4>
-                        <p>Наша компания готова помочь вам и с первым и со вторым аспектом данной задачи. В нашем каталоге вы сможете подобрать желаемый вариант материала и сразу заказать профессиональную укладку на вашем участке. Вниманию покупателей всегда доступна качественная и прочная тротуарная плитка от производителя по оптимальной стоимости.Если вам нужна надежная тротуарная плитка, купить  в Волоколамском районе такой материал можно у нас, цена продукции из каталога вас приятно удивит и не ударит по бюджету. Оформить заказ можно прямо на сайте.<br><br> Если в процессе выбора вам понадобится консультация специалиста, вы всегда можете заказать обратный звонок, используя специальную функцию на сайте, либо самостоятельно позвонить менеджеру по указанным телефонам.<br><br>Теперь если вам нужна тротуарная плитка, вы знаете где ее можно приобрести. «Мастер Строй» - компания-производитель, которая гарантирует достойный уровень качества по приятной цене. <br><br> ООО «МАСТЕ</p>
+                        <p>Наша компания готова помочь вам и с первым и со вторым аспектом данной задачи. В нашем
+                            каталоге вы сможете подобрать желаемый вариант материала и сразу заказать профессиональную
+                            укладку на вашем участке. Вниманию покупателей всегда доступна качественная и прочная
+                            тротуарная плитка от производителя по оптимальной стоимости.Если вам нужна надежная
+                            тротуарная плитка, купить в Волоколамском районе такой материал можно у нас, цена продукции
+                            из каталога вас приятно удивит и не ударит по бюджету. Оформить заказ можно прямо на
+                            сайте.<br><br> Если в процессе выбора вам понадобится консультация специалиста, вы всегда
+                            можете заказать обратный звонок, используя специальную функцию на сайте, либо самостоятельно
+                            позвонить менеджеру по указанным телефонам.<br><br>Теперь если вам нужна тротуарная плитка,
+                            вы знаете где ее можно приобрести. «Мастер Строй» - компания-производитель, которая
+                            гарантирует достойный уровень качества по приятной цене. <br><br> ООО «МАСТЕ</p>
                         <button class="button">
-                        <div class="button__outer">
-                            <div class="button__inner">
-                                <span class="button__text">Приобрести</span>
+                            <div class="button__outer">
+                                <div class="button__inner">
+                                    <span class="button__text">Приобрести</span>
+                                </div>
                             </div>
-                        </div>
-                    </button>
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- header------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
-        <div class="header">
+        <!-- goods------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
+        <div class="goods">
             <div class="container">
-                <div class="header__container"></div>
+                <div class="goods__container">
+                    <h2 style="text-align: center; margin: 50px 0;">Топ товаров</h2>
+                    <div class="goods__boxes">
+                        <div class="goods__item">
+                            <div class="goods__box">
+                                <img src="./img/goods.svg" alt="product" class="goods__image">
+                                <h5 class="goods__title">Шестигранник 250x220x70</h5>
+                                <p class="goods__desc">Размер: 250x220x70мм<br>Количество: 21 шт/кв.м<br>Цвета в
+                                    наличии: 8</p>
+                                <div class="goods__colors">
+                                    <div class="goods__color" style="background: #737373" data-color="Серый"></div>
+                                    <div class="goods__color" style="background: #9C0909" data-color="Красный"></div>
+                                    <div class="goods__color" style="background: #D48D37" data-color="Желтый"></div>
+                                    <div class="goods__color" style="background: #964B00" data-color="Коричневый"></div>
+                                    <div class="goods__color" style="background: #DC143C" data-color="Розовый"></div>
+                                    <div class="goods__color" style="background: #49423D" data-color="Более серый">
+                                    </div>
+                                    <div class="goods__color" style="background: #D77D31" data-color="Желто-оранжевый">
+                                    </div>
+                                    <div class="goods__color" style="background: #000000" data-color="Черный"></div>
+                                </div>
+                            </div>
+                            <div class="goods__sidebar">
+                                <div class="goods__sidebar-text color">Выберите цвет</div>
+                                <div class="goods__sidebar-text price"></div>
+                                <div class="goods__plus">+</div>
+                            </div>
+                        </div>
+                        <div class="goods__item">
+                            <div class="goods__box">
+                                <img src="./img/goods2.svg" alt="product" class="goods__image">
+                                <h5 class="goods__title">Брусчатка 200x100x50</h5>
+                                <p class="goods__desc">Размер: 200x100x50мм <br>Количество: 50 пара шт/кв.м <br>Цвета в
+                                    наличии: 8</p>
+                                <div class="goods__colors">
+                                    <div class="goods__color" style="background: #737373" data-color="Серый"></div>
+                                    <div class="goods__color" style="background: #9C0909" data-color="Красный"></div>
+                                    <div class="goods__color" style="background: #D48D37" data-color="Желтый"></div>
+                                    <div class="goods__color" style="background: #964B00" data-color="Коричневый"></div>
+                                    <div class="goods__color" style="background: #DC143C" data-color="Розовый"></div>
+                                    <div class="goods__color" style="background: #49423D" data-color="Более серый">
+                                    </div>
+                                    <div class="goods__color" style="background: #D77D31" data-color="Желто-оранжевый">
+                                    </div>
+                                    <div class="goods__color" style="background: #000000" data-color="Черный"></div>
+                                </div>
+                            </div>
+                            <div class="goods__sidebar">
+                                <div class="goods__sidebar-text color">Выберите цвет</div>
+                                <div class="goods__sidebar-text price"></div>
+                                <div class="goods__plus">+</div>
+                            </div>
+                        </div>
+                        <div class="goods__item">
+                            <div class="goods__box">
+                                <img src="./img/goods3.svg" alt="product" class="goods__image">
+                                <h5 class="goods__title">Плитка квадрат 330x330x60</h5>
+                                <p class="goods__desc">Размер: 330x330x60мм <br>Количество: 9 шт/кв.м <br>Цвета в
+                                    наличии: 8</p>
+                                <div class="goods__colors">
+                                    <div class="goods__color" style="background: #737373" data-color="Серый"></div>
+                                    <div class="goods__color" style="background: #9C0909" data-color="Красный"></div>
+                                    <div class="goods__color" style="background: #D48D37" data-color="Желтый"></div>
+                                    <div class="goods__color" style="background: #964B00" data-color="Коричневый"></div>
+                                    <div class="goods__color" style="background: #DC143C" data-color="Розовый"></div>
+                                    <div class="goods__color" style="background: #49423D" data-color="Более серый">
+                                    </div>
+                                    <div class="goods__color" style="background: #D77D31" data-color="Желто-оранжевый">
+                                    </div>
+                                    <div class="goods__color" style="background: #000000" data-color="Черный"></div>
+                                </div>
+                            </div>
+                            <div class="goods__sidebar">
+                                <div class="goods__sidebar-text color">Выберите цвет</div>
+                                <div class="goods__sidebar-text price"></div>
+                                <div class="goods__plus">+</div>
+                            </div>
+                        </div>
+                        <div class="goods__item">
+                            <div class="goods__box">
+                                <img src="./img/goods4.svg" alt="product" class="goods__image">
+                                <h5 class="goods__title">Катушка 250x160x60</h5>
+                                <p class="goods__desc">Размер: 250x160x60мм <br>Количество: 30 шт/кв.м Цвета в наличии:
+                                    8<br> </p>
+                                <div class="goods__colors">
+                                    <div class="goods__color" style="background: #737373" data-color="Серый"></div>
+                                    <div class="goods__color" style="background: #9C0909" data-color="Красный"></div>
+                                    <div class="goods__color" style="background: #D48D37" data-color="Желтый"></div>
+                                    <div class="goods__color" style="background: #964B00" data-color="Коричневый"></div>
+                                    <div class="goods__color" style="background: #DC143C" data-color="Розовый"></div>
+                                    <div class="goods__color" style="background: #49423D" data-color="Более серый">
+                                    </div>
+                                    <div class="goods__color" style="background: #D77D31" data-color="Желто-оранжевый">
+                                    </div>
+                                    <div class="goods__color" style="background: #000000" data-color="Черный"></div>
+                                </div>
+                            </div>
+                            <div class="goods__sidebar">
+                                <div class="goods__sidebar-text color">Выберите цвет</div>
+                                <div class="goods__sidebar-text price"></div>
+                                <div class="goods__plus">+</div>
+                            </div>
+                        </div>
+                        <div class="goods__item">
+                            <div class="goods__box">
+                                <img src="./img/goods5.svg" alt="product" class="goods__image">
+                                <h5 class="goods__title">Кирпичик 250x125x60</h5>
+                                <p class="goods__desc">Размер: 250x125x60мм <br>Количество: 32 шт/кв.м<br>Цвета в
+                                    наличии: 8</p>
+                                <div class="goods__colors">
+                                    <div class="goods__color" style="background: #737373" data-color="Серый"></div>
+                                    <div class="goods__color" style="background: #9C0909" data-color="Красный"></div>
+                                    <div class="goods__color" style="background: #D48D37" data-color="Желтый"></div>
+                                    <div class="goods__color" style="background: #964B00" data-color="Коричневый"></div>
+                                    <div class="goods__color" style="background: #DC143C" data-color="Розовый"></div>
+                                    <div class="goods__color" style="background: #49423D" data-color="Более серый">
+                                    </div>
+                                    <div class="goods__color" style="background: #D77D31" data-color="Желто-оранжевый">
+                                    </div>
+                                    <div class="goods__color" style="background: #000000" data-color="Черный"></div>
+                                </div>
+                            </div>
+                            <div class="goods__sidebar">
+                                <div class="goods__sidebar-text color">Выберите цвет</div>
+                                <div class="goods__sidebar-text price"></div>
+                                <div class="goods__plus">+</div>
+                            </div>
+                        </div>
+                        <div class="goods__item">
+                            <div class="goods__box">
+                                <img src="./img/goods6.svg" alt="product" class="goods__image">
+                                <h5 class="goods__title">Волна 250x125x60</h5>
+                                <p class="goods__desc">Размер: 250x125x60мм <br>Количество: 32/40 шт/кв.м<br>Цвета в
+                                    наличии: 8</p>
+                                <div class="goods__colors">
+                                    <div class="goods__color" style="background: #737373" data-color="Серый"></div>
+                                    <div class="goods__color" style="background: #9C0909" data-color="Красный"></div>
+                                    <div class="goods__color" style="background: #D48D37" data-color="Желтый"></div>
+                                    <div class="goods__color" style="background: #964B00" data-color="Коричневый"></div>
+                                    <div class="goods__color" style="background: #DC143C" data-color="Розовый"></div>
+                                    <div class="goods__color" style="background: #49423D" data-color="Более серый">
+                                    </div>
+                                    <div class="goods__color" style="background: #D77D31" data-color="Желто-оранжевый">
+                                    </div>
+                                    <div class="goods__color" style="background: #000000" data-color="Черный"></div>
+                                </div>
+                            </div>
+                            <div class="goods__sidebar">
+                                <div class="goods__sidebar-text color">Выберите цвет</div>
+                                <div class="goods__sidebar-text price"></div>
+                                <div class="goods__plus">+</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
