--- a/main.html
+++ b/main.html
@@ -383,6 +383,40 @@
                 </div>
             </div>
         </div>
+        <!-- production------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
+        <div class="production">
+            <div class="container">
+                <div class="production__container">
+                    <h2 style="text-align: center; margin: 50px 0; color: #FFFF;">О производстве</h2>
+                    <ul class="production__list">
+                        <li class="production__items">
+                            <a href="#"><img class="production__img" src="./img/logo.svg" alt="masterstroy"></a>
+                            <div>
+                                <img src="./img/production.svg" alt="dastavka">
+                                <p>Доставка и разгрузка плитки краном-манипулятором</p>
+                            </div>
+                            <div>
+                                <img src="./img/production2.svg" alt="dastavka">
+                                <p>Множество видов тротуарной плитки различной формы и фактуры</p>
+                            </div>
+                            <div>
+                                <img src="./img/production3.svg" alt="dastavka">
+                                <p>Весь товар сертифицирован! Официальная гарантия!</p>
+                            </div>
+                        </li>
+                        <li>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/ejsgLLCtR9E?si=kzQT9evV-ytKcfKx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- header------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
+        <div class="header">
+            <div class="container">
+                <div class="header__container"></div>
+            </div>
+        </div>
     </main>
     <!-- header------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
     <div class="header">
