--- a/main.html
+++ b/main.html
@@ -405,25 +405,101 @@
                             </div>
                         </li>
                         <li>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/ejsgLLCtR9E?si=kzQT9evV-ytKcfKx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/ejsgLLCtR9E?si=kzQT9evV-ytKcfKx"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
-        <!-- header------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
-        <div class="header">
+    </main>
+    <section>
+        <!-- work------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
+        <div class="work">
             <div class="container">
-                <div class="header__container"></div>
+                <div class="work__container">
+                    <h2 style="text-align: center; margin: 50px 0;">Наши работы</h2>
+                    <p>Отделка участка, сада, входной группы или любой другой частной территории требует большого
+                        внимания со стороны владельца, поскольку именно эти зоны являются «лицом», а значит и престижем
+                        вашего дома или коммерческого объекта. Подбор прочного и эстетически презентабельного материала
+                        для оформления входа, дорожек, пешеходных зон – это уже половина успеха отделки. Вторая половина
+                        – это, безусловно, грамотная укладка, обеспечивающая долговечность покрытия.</p>
+                    <ul>
+                        <li class="work__list">
+                            <div class="work__image">
+                                <img src="./img/work1.svg" alt="work">
+                            </div>
+                            <div class="work__image">
+                                <img src="./img/work2.svg" alt="work">
+                            </div>
+                            <div class="work__image">
+                                <img src="./img/work3.svg" alt="work">
+                            </div>
+                            <div class="work__image">
+                                <img src="./img/work4.svg" alt="work">
+                            </div>
+                            <div class="work__image">
+                                <img src="./img/work5.svg" alt="work">
+                            </div>
+                            <div class="work__image">
+                                <img src="./img/work6.svg" alt="work">
+                            </div>
+                            <div class="work__image">
+                                <img src="./img/work7.svg" alt="work">
+                            </div>
+                            <div class="work__image">
+                                <img src="./img/work8.svg" alt="work">
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </main>
-    <!-- header------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
-    <div class="header">
-        <div class="container">
-            <div class="header__container"></div>
+    </section>
+    <article>
+        <!-- property------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
+        <div class="property">
+            <div class="container">
+                <div class="property__container">
+                    <h2 style="text-align: center; margin: 50px 0; color: #FFFF;">Наши преимущества</h2>
+                    <ul class="property__list">
+                        <li class="property__items">
+                            <img src="./img/clipboard_120835 1.svg" alt="clipboard">
+                            <h5>Тротуарная плитка от производителя в широком ассортименте</h5>
+                            <p>На сайте вы сможете подобрать прессованную, вибролитую или фасадную плитку, блоки и бордюры, водостоки, крышки на столбы и многое другое.</p>
+                        </li>
+                        <li class="property__items">
+                            <img src="./img/user-4_icon-icons.com_63829 1.svg" alt="user">
+                            <h5>Высокий уровень сервиса обслуживания</h5>
+                            <p>Наши менеджеры всегда вежливые и профессиональные в работе с клиентами, они готовы помочь с выбором нужной модели и ответить на все вопросы клиента.</p>
+                        </li>
+                        <li class="property__items">
+                            <img src="./img/builder-27_icon-icons.com_60366 1.svg" alt="builder">
+                            <h5>Услуги команды опытных специалистов по монтажу</h5>
+                            <p>Наша компания предлагает услуги профессиональной укладки и другие работы по благоустройству частных территорий.</p>
+                        </li>
+                        <li class="property__items">
+                            <img src="./img/mbridelivery_99588 1.svg" alt="delivery">
+                            <h5>Быстрая и удобная доставка</h5>
+                            <p>Развоз заказов осуществляется при помощи спецтехники – манипулятора, облегчающего процесс погрузки и разгрузки по Волоколамскому, Лотошинскому, Шаховскому району, Истре, Клину, Рузе.</p>
+                        </li>
+                        <li class="property__items">
+                            <img src="./img/mbricash_99554 1.svg" alt="cash">
+                            <h5>Демократичная стоимость</h5>
+                            <p>Если вы хотите подобрать и купить тротуарную плитку по наиболее выгодной цене в регионе – вам однозначно в «Мастер Строй»! У нас всегда первая цена напрямую от производителя!</p>
+                        </li>
+                        <li class="property__items">
+                            <img src="./img/quality_award_icon_152104 1.svg" alt="award">
+                            <h5>Безупречный контроль качества продукции</h5>
+                            <p>Все материалы соответствуют техническим нормам ГОСТа, а тщательный контроль позволяет исключить риск попадания брака в партию.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-    </div>
+    </article>
     <!-- header------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
     <div class="header">
         <div class="container">
