--- a/main.html
+++ b/main.html
@@ -468,50 +468,95 @@
                         <li class="property__items">
                             <img src="./img/clipboard_120835 1.svg" alt="clipboard">
                             <h5>Тротуарная плитка от производителя в широком ассортименте</h5>
-                            <p>На сайте вы сможете подобрать прессованную, вибролитую или фасадную плитку, блоки и бордюры, водостоки, крышки на столбы и многое другое.</p>
+                            <p>На сайте вы сможете подобрать прессованную, вибролитую или фасадную плитку, блоки и
+                                бордюры, водостоки, крышки на столбы и многое другое.</p>
                         </li>
                         <li class="property__items">
                             <img src="./img/user-4_icon-icons.com_63829 1.svg" alt="user">
                             <h5>Высокий уровень сервиса обслуживания</h5>
-                            <p>Наши менеджеры всегда вежливые и профессиональные в работе с клиентами, они готовы помочь с выбором нужной модели и ответить на все вопросы клиента.</p>
+                            <p>Наши менеджеры всегда вежливые и профессиональные в работе с клиентами, они готовы помочь
+                                с выбором нужной модели и ответить на все вопросы клиента.</p>
                         </li>
                         <li class="property__items">
                             <img src="./img/builder-27_icon-icons.com_60366 1.svg" alt="builder">
                             <h5>Услуги команды опытных специалистов по монтажу</h5>
-                            <p>Наша компания предлагает услуги профессиональной укладки и другие работы по благоустройству частных территорий.</p>
+                            <p>Наша компания предлагает услуги профессиональной укладки и другие работы по
+                                благоустройству частных территорий.</p>
                         </li>
                         <li class="property__items">
                             <img src="./img/mbridelivery_99588 1.svg" alt="delivery">
                             <h5>Быстрая и удобная доставка</h5>
-                            <p>Развоз заказов осуществляется при помощи спецтехники – манипулятора, облегчающего процесс погрузки и разгрузки по Волоколамскому, Лотошинскому, Шаховскому району, Истре, Клину, Рузе.</p>
+                            <p>Развоз заказов осуществляется при помощи спецтехники – манипулятора, облегчающего процесс
+                                погрузки и разгрузки по Волоколамскому, Лотошинскому, Шаховскому району, Истре, Клину,
+                                Рузе.</p>
                         </li>
                         <li class="property__items">
                             <img src="./img/mbricash_99554 1.svg" alt="cash">
                             <h5>Демократичная стоимость</h5>
-                            <p>Если вы хотите подобрать и купить тротуарную плитку по наиболее выгодной цене в регионе – вам однозначно в «Мастер Строй»! У нас всегда первая цена напрямую от производителя!</p>
+                            <p>Если вы хотите подобрать и купить тротуарную плитку по наиболее выгодной цене в регионе –
+                                вам однозначно в «Мастер Строй»! У нас всегда первая цена напрямую от производителя!</p>
                         </li>
                         <li class="property__items">
                             <img src="./img/quality_award_icon_152104 1.svg" alt="award">
                             <h5>Безупречный контроль качества продукции</h5>
-                            <p>Все материалы соответствуют техническим нормам ГОСТа, а тщательный контроль позволяет исключить риск попадания брака в партию.</p>
+                            <p>Все материалы соответствуют техническим нормам ГОСТа, а тщательный контроль позволяет
+                                исключить риск попадания брака в партию.</p>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
     </article>
-    <!-- header------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
-    <div class="header">
-        <div class="container">
-            <div class="header__container"></div>
+    <footer>
+        <!-- footer------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
+        <div class="footer">
+            <div class="container">
+                <div class="footer__container">
+                    <div class="footer__first">
+                        <div class="footer__box">
+                            <h6>Магазин</h6>
+                            <p>Петрсональный раздел</p>
+                            <div class="footer__item">
+                                <i class="fas fa-clock footer__icon"></i>
+                                <div id="time" class="footer__text">
+                                    Режим работы: <br> 8:00 – 20:00
+                                </div>
+                            </div>
+                            <div class="footer__item">
+                                <i class="fas fa-phone footer__icon"></i>
+                                <div class="footer__text">
+                                    <a href="tel:+74951234567" class="footer__link">+7 (926) 105-94-14</a>
+                                    <a href="tel:+74957654321" class="footer__link">+7 (910) 470-67-97</a>
+                                    <a href="tel:+74959876543" class="footer__link">+7 (499) 994-90-99</a>
+                                </div>
+                            </div>
+                        </div>
+                        <ul class="footer__list">
+                            <li class="footer__items">
+                                <h6>Каталог</h6>
+                                <a class="footer__link" href="#">Акции</a>
+                                <a class="footer__link" href="#">Тротуарная плитка</a>
+                                <a class="footer__link" href="#">Бордюры</a>
+                            </li>
+                            <li class="footer__items">
+                                <h6>Сервисы</h6>
+                                <a class="footer__link" href="#">Сервисы</a>
+                                <a class="footer__link" href="#">Укладка брусчатки</a>
+                                <a class="footer__link" href="#">Доставка</a>
+                            </li>
+                            <li class="footer__items">
+                                <h6>О компании</h6>
+                                <a class="footer__link" href="#">Контакты</a>
+                                <a class="footer__link" href="#">Завод BRAER</a>
+                                <a class="footer__link" href="#">Портфолио</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <p>© 2022 ООО "Мастер строй"</p>
+                </div>
+            </div>
         </div>
-    </div>
-    <!-- header------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
-    <div class="header">
-        <div class="container">
-            <div class="header__container"></div>
-        </div>
-    </div>
+    </footer>
 
     <script src="./js/main.js"></script>
 </body>
